1. Added more information in README.md about linux releases.
2. Added instructions in README.md to install client