@@ -1,2 +1,4 @@
-1. Added more information in README.md about linux releases.
-2. Added instructions in README.md to install client
+1. Added warning for internet connection in login screen.
+2. Added warning for internet connection in signup screen.
+3. Added floating button on main screen.
+4. Successfully logging-in now takes you directly to the vault screen.
